<resources>
    <string name="app_name">DaCare</string>
    <string name="title_home">Home</string>
    <string name="title_routine">Routine</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_cart">Cart</string>
    <string name="title_notifications">Notifications</string>
    <string name="user">User</string>
    <string name="logout_string">Đăng xuất</string>
</resources>