<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.prm392.dacare.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_routine"
        android:name="com.prm392.dacare.ui.quiz.QuizFragment"
        android:label="@string/title_routine"/>

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.prm392.dacare.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.prm392.dacare.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.prm392.dacare.ui.user.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />
</navigation>